# agents-sdk

./: .bazelrc  .env.template  .gitignore  BUILD  LICENSE.md  MODULE.bazel  README.md
examples/: BUILD  actor_agent_example.cpp  autonomous_agent_example.cpp  coroutine_example.cpp  evaluator_optimizer_example.cpp  multimodal_example.cpp  orchestrator_example.cpp  parallel_example.cpp  prompt_chain_example.cpp  robotics_object_detection_demo.cpp  routing_example.cpp  simple_agent.cpp  streaming_chat.cpp  structured_output_example.cpp
include/agents-cpp/: agent.h  agent_context.h  config_loader.h  context.h  coroutine_utils.h  llm_interface.h  logger.h  media_envelope.h  memory.h  tool.h  types.h  workflow.h
include/agents-cpp/agents/: actor_agent.h  autonomous_agent.h
include/agents-cpp/llms/: anthropic_llm.h  google_llm.h  ollama_llm.h  openai_llm.h
include/agents-cpp/realtime/: ilive_client.h  live_client_interface.h
lib/linux/: libcpr.so.1  libcurl.so.4  libpython3.11.dylib
lib/macos/: libcpr.1.dylib  libcurl.4.dylib
nazarii_tereshkevych_pmi25/modul1/: blablacar.py  booking.txt  main.py
nazarii_tereshkevych_pmi25/task1/: main.py
nazarii_tereshkevych_pmi25/task2/: linked_list.py  main.py  validator.py
nazarii_tereshkevych_pmi25/task3/: collection.py  data.txt  main.py  vaccination_request.py  validation.py
nazarii_tereshkevych_pmi25/task4/: collection.py  data.txt  main.py  vaccination_request.py  validation.py
nazarii_tereshkevych_pmi25/task5/: collection.py  data.txt  main.py  vaccination_request.py  validation.py
(+13 files in other folders)
