"""
MODULE.bazel
This file declares external dependencies using Bazel bzlmod.
"""
module(name = "agents", version = "0.1.0")

# Core C++ rules
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.4")

# JSON library
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# End of MODULE.bazel